force-app/main/default/objects/ActivityFieldHistory__c/ActivityFieldHistory__c.object-meta.xml
<CustomObject>
    <description>To track the Activity/Task field history</description>
    <label>Activity Field History</label>
    <nameField>
        <displayFormat>AFHN-{000000}</displayFormat>
        <label>Activity Field History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>