force-app/main/default/objects/ActivityFieldHistory__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The field whose history is tracked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>