force-app/main/default/objects/ActivityFieldHistory__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>New value of the field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>