force-app/main/default/objects/ActivityFieldHistory__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Old value of the field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>