force-app/main/default/objects/ActivityFieldHistory__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Record Id of the field whose history is tracked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>